traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: value unary_! is not a member of Unit
  while (!positionFinale()) {
         ^Snake:25: warning: enclosing method positionFinale has result type Unit: return value discarded
  return bool
  ^